--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,12 @@
 {
-  "manifest_version": 3,
-  "name": "My Extension",
-  "version": "1.0",
-  "description": "A brief description of my extension",
-  "permissions": ["activeTab"],
-  "action": {
-    "default_popup": "popup.html"
-  },
-  "background": {
-    "service_worker": ["speech.py","translator.py","summarization.py","main.py"]
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
-    }
-  ]
-}
+    "manifest_version": 2,
+    "name": "Automatic Meeting Summarizer Extension",
+    "description": "Create a summary of online meeting",
+    "version": "1.0",
+    "browser_action": {
+      "default_icon": "icon.png",
+      "default_popup": "popup.html"
+    },
+    "permissions": ["activeTab"]
+  }
+  
